--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,13 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto';
+  font-family: -apple-system, BlinkMacSystemFont, "Roboto";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F5F5F5 !important;
+  background-color: #f5f5f5 !important;
+}
+
+.no-on-mobile {
+  @media (max-width: 1200px) {
+    display: none;
+  }
 }
